tests/baselines/reference/parserUnterminatedGeneric1.errors.txt
==== tests/cases/compiler/parserUnterminatedGeneric1.ts (3 errors) ====
     interface IQService {
            all(promises: IPromise < any > []): IPromise<
                                                         
!!! parserUnterminatedGeneric1.ts(2,54): error TS1005: '>' expected.
                          ~~~~~~~~
!!! parserUnterminatedGeneric1.ts(2,23): error TS2095: Cannot find name 'IPromise'.
                                                ~~~~~~~~
!!! parserUnterminatedGeneric1.ts(2,45): error TS2095: Cannot find name 'IPromise'.